...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.905"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/add_students_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onAddStudentsClicked"
        android:text="Add Students"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0">
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.381">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/persons_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

    <TextView
        android:id="@+id/textView2"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.74"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/fav_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onViewFavClicked"
        android:text="View Favorites"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
...
